--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
   <div class="calculator">
     <div class="display">
-      <div class="small-display">
-        
-      </div>
-      <h1 id="big-display">0</h1>
+      <div class="small-display"> .</div>
+      <h2 id="big-display">0</h2>
     </div>
     <div class="keypad">
 
