--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       </div>
     </div>
   </div>
+
+  <div class="footer">
+    Copyright &copy; <a href="">danihire</a> 2022
+  </div>
+  
 </body>
 <script src="script.js"></script>
 </html>
