--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   </div>
 
   <div class="footer">
-    Copyright &copy; <a href="">danihire</a> 2022
+    &copy; <a href="">danihire</a> 2022
   </div>
-  
+
 </body>
 <script src="script.js"></script>
 </html>
