--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="keypad">
 
       <div class="key-row">
-        <div class="key clear" data-value="clear">Clear</div>
-        <div class="key delete" data-value="delete">Delete</div>
+        <div class="key clear" data-value="Backspace">Clear</div>
+        <div class="key delete" data-value="Delete">Delete</div>
       </div>
 
       <div class="key-row">
@@ -39,11 +39,11 @@
         <div class="key number" data-value="1" >1</div>
         <div class="key number" data-value="2" >2</div>
         <div class="key number" data-value="3" >3</div>
-        <div class="key operator" data-value="x" >x</div>
+        <div class="key operator" data-value="*" >x</div>
       </div>
       
       <div class="key-row">
-        <div class="key" data-value="." >.</div>
+        <div class="key number" data-value="." >.</div>
         <div class="key number" data-value="0" >0</div>
         <div class="key equals" data-value="=" >=</div>
         <div class="key operator" data-value="/" >/</div>
